--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@tanstack/react-query": "^5.17.15",
+    "@tanstack/react-query-devtools": "^5.17.18",
     "axios": "^1.6.5",
     "framer-motion": "^10.17.9",
     "react": "^18.2.0",
